--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
             <scope>runtime</scope>
         </dependency>
 
+
         <!-- Swagger / OpenAPI (SpringDoc atualizado) -->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -114,6 +115,13 @@
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>2.2.22</version>
+        </dependency>
+
+        <!-- Logging - Logstash Encoder for JSON logs -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
         </dependency>
     </dependencies>
 
