--- a/src/main/resources/swagger/api.yaml
+++ b/src/main/resources/swagger/api.yaml
@@ -93,7 +93,7 @@ components:
           type: string
 
     # ADDRESS
-    AddressResponse:
+    Address:
       type: object
       description: Resposta com dados de endereço (number é opcional - não retornado pelo ViaCEP)
       properties:
@@ -120,13 +120,13 @@ components:
           example: "01310-100"
 
     # CLIENTS
-    Client:
+    ClientResponse:
       type: object
       required: [id, name, phone]
       properties:
         id:
-          type: string
-          format: uuid
+          type: integer
+          format: int64
         name:
           type: string
           example: "Maria Silva"
@@ -137,43 +137,64 @@ components:
           type: string
           format: email
           example: "maria@example.com"
+        cpf:
+          type: string
+          example: "123.456.789-00"
         address:
-          $ref: '#/components/schemas/AddressResponse'
+          $ref: '#/components/schemas/Address'
         createdAt:
           type: string
           format: date-time
+          pattern: "dd-MM-yyyy"
+          example: "09-12-2025"
+        updatedAt:
+          type: string
+          format: date-time
+          pattern: "dd-MM-yyyy"
+          example: "09-12-2025"
 
     ClientCreate:
       type: object
-      required: [name, phone]
+      required: [name, phone, email, cpf]
       properties:
-        name: { type: string }
-        phone: { type: string }
-        email: { type: string, format: email }
+        name:
+          type: string
+          minLength: 1
+        phone:
+          type: string
+          pattern: '^\d{10,11}$'
+        email:
+          type: string
+          format: email
+        cpf:
+          type: string
+          x-field-extra-annotation: "@org.hibernate.validator.constraints.br.CPF(message = \"CPF inválido\")"
         address:
-          $ref: '#/components/schemas/AddressResponse'
+          $ref: '#/components/schemas/Address'
+
 
     ClientUpdate:
       type: object
       properties:
-        name: { type: string }
+        name:  { type: string }
         phone: { type: string }
         email: { type: string, format: email }
+        cpf:   { type: string, x-field-extra-annotation: "@org.hibernate.validator.constraints.br.CPF(message = \"CPF inválido\")"}
         address:
-          $ref: '#/components/schemas/AddressResponse'
+          $ref: '#/components/schemas/Address'
 
     # PROFESSIONALS
     Professional:
       type: object
       required: [id, name]
       properties:
-        id: { type: string, format: uuid }
+        id: { type: integer, format: int64 }
         name: { type: string, example: "Joana Pereira" }
         bio: { type: string, example: "Especialista em alongamento e nail art" }
         phone: { type: string, example: "+55 51 98888-1111" }
         serviceIds:
           type: array
-          items: { type: string, format: uuid }
+          items: { type: integer, format: int64 }
         createdAt:
           type: string
           format: date-time
@@ -187,7 +208,7 @@ components:
         phone: { type: string }
         serviceIds:
           type: array
-          items: { type: string, format: uuid }
+          items: { type: integer, format: int64 }
 
     ProfessionalUpdate:
       type: object
@@ -197,14 +218,14 @@ components:
         phone: { type: string }
         serviceIds:
           type: array
-          items: { type: string, format: uuid }
+          items: { type: integer, format: int64 }
 
     # SERVICES
     Service:
       type: object
       required: [id, name, durationMinutes, priceCents]
       properties:
-        id: { type: string, format: uuid }
+        id: { type: integer, format: int64 }
         name: { type: string, example: "Manicure Básica" }
         description: { type: string }
         category: { type: string, example: "tradicional" }
@@ -242,10 +263,10 @@ components:
       type: object
       required: [id, clientId, professionalId, serviceId, startAt, endAt, status]
       properties:
-        id: { type: string, format: uuid }
-        clientId: { type: string, format: uuid }
-        professionalId: { type: string, format: uuid }
-        serviceId: { type: string, format: uuid }
+        id: { type: integer, format: int64 }
+        clientId: { type: integer, format: int64 }
+        professionalId: { type: integer, format: int64 }
+        serviceId: { type: integer, format: int64 }
         startAt: { type: string, format: date-time }
         endAt: { type: string, format: date-time }
         status:
@@ -257,9 +278,9 @@ components:
       type: object
       required: [clientId, professionalId, serviceId, startAt]
       properties:
-        clientId: { type: string, format: uuid }
-        professionalId: { type: string, format: uuid }
-        serviceId: { type: string, format: uuid }
+        clientId: { type: integer, format: int64 }
+        professionalId: { type: integer, format: int64 }
+        serviceId: { type: integer, format: int64 }
         startAt: { type: string, format: date-time }
         notes: { type: string }
 
@@ -275,8 +296,8 @@ components:
     Notification:
       type: object
       properties:
-        id: { type: string, format: uuid }
-        bookingId: { type: string, format: uuid }
+        id: { type: integer, format: int64 }
+        bookingId: { type: integer, format: int64 }
         channel: { type: string, example: "WHATSAPP" }
         message: { type: string }
         sentAt: { type: string, format: date-time }
@@ -285,7 +306,7 @@ components:
       type: object
       required: [bookingId, channel]
       properties:
-        bookingId: { type: string, format: uuid }
+        bookingId: { type: integer, format: int64 }
         channel:
           type: string
           enum: [WHATSAPP, EMAIL, PUSH, SMS]
@@ -377,7 +398,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Client'
+                  $ref: '#/components/schemas/ClientResponse'
     post:
       tags: [clients]
       summary: Criar cliente
@@ -394,7 +415,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
         '400':
           $ref: '#/components/responses/BadRequest'
 
@@ -408,15 +429,15 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '200':
           description: Cliente encontrado
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
         '404':
           $ref: '#/components/responses/NotFound'
     put:
@@ -428,8 +449,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       requestBody:
         required: true
         content:
@@ -442,7 +463,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Client'
+                $ref: '#/components/schemas/ClientResponse'
     delete:
       tags: [clients]
       summary: Remover cliente (soft delete recomendado)
@@ -452,11 +473,34 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '204':
           $ref: '#/components/responses/NoContent'
+
+  /clients/search:
+    get:
+      tags: [clients]
+      summary: Buscar clientes por Nome (Partial Match)
+      description: "Pesquisa por nome parcial."
+      operationId: getClientByName
+      parameters:
+        - name: name
+          in: query
+          required: true
+          schema:
+            type: string
+          description: Nome ou parte do nome para pesquisa
+      responses:
+        '200':
+          description: Lista de clientes encontrados
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ClientResponse'
 
   ################################################################
   # PROFESSIONALS
@@ -471,8 +515,8 @@ paths:
           in: query
           required: false
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
           description: filtrar por serviceId
       responses:
         '200':
@@ -513,8 +557,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '200':
           description: Profissional encontrado
@@ -533,8 +577,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       requestBody:
         required: true
         content:
@@ -557,8 +601,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '204':
           $ref: '#/components/responses/NoContent'
@@ -616,8 +660,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '200':
           description: Serviço encontrado
@@ -636,8 +680,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       requestBody:
         required: true
         content:
@@ -660,8 +704,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '204':
           $ref: '#/components/responses/NoContent'
@@ -679,14 +723,14 @@ paths:
           in: query
           required: false
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
         - name: professionalId
           in: query
           required: false
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
         - name: date
           in: query
           required: false
@@ -734,8 +778,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '200':
           description: Agendamento encontrado
@@ -754,8 +798,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       requestBody:
         required: true
         content:
@@ -780,8 +824,8 @@ paths:
           in: path
           required: true
           schema:
-            type: string
-            format: uuid
+            type: integer
+            format: int64
       responses:
         '204':
           $ref: '#/components/responses/NoContent'
@@ -840,7 +884,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AddressResponse'
+                $ref: '#/components/schemas/Address'
         '404':
           $ref: '#/components/responses/NotFound'
 
